test/sensitive-data-searcher/invalid-files/invalid.java
public class Foo {
    String username = '5';
    String password;

    private String c = 'test';
    private String user = 'root'

    void a () {
        this.password = '6';

        System.out.println('test');
    }
}
